# Profile-application

./: .gitignore  pyproject.toml
src/: main.py
src/application/: service.py
src/config/: dbconfig.py
src/domain/: model.py
